--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -8,7 +8,7 @@
       content="Web site created using create-react-app"
       
     />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,900;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,200;0,300;0,400;0,500;0,900;1,700&display=swap" rel="stylesheet">
     <title>Mauro Loyola</title>
     <style>
       *{
