--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Mauro's Portfolio made with ReactJS and SASS"
       
     />
+    <link rel="icon" href="./assets/portfolio-icon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,200;0,300;0,400;0,500;0,900;1,700&display=swap" rel="stylesheet">
-    <title>Mauro Loyola</title>
+    <title>Mauro Loyola | Portfolio</title>
     <style>
       *{
         font-family: 'Roboto', sans-serif;
